# ParMETIS_cmake

./: CMakeLists.txt
include/: parmetislib.h
programs/: CMakeLists.txt  adaptgraph.c  dglpart.c  io.c  mtest.c  otest.c  parmetis.c  parmetisbin.h  pometis.c  ptest.c
src/: akwayfm.c  ametis.c  balancemylink.c  comm.c  csrmatch.c  ctrl.c  debug.c  diffutil.c  frename.c  gkmetis.c  gkmpi.c  graph.c  initbalance.c  initmsection.c  initpart.c  kmetis.c  kwayrefine.c  match.c  mdiffusion.c  mesh.c  mmetis.c  move.c  msetup.c  node_refine.c  ometis.c  pspases.c  redomylink.c  remap.c  renumber.c  rmetis.c  selectq.c  serial.c  stat.c  timer.c  util.c  wave.c  weird.c  wspace.c  xyzpart.c
tests/: CMakeLists.txt
